--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web devoloper protfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styls/protfolio.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h1 class="nav-title">Ra<span class="text-praimary">s</span>hu</h1>
+            <ul>
+                <li><a href="">protfolio</a></li>
+                <li><a href="">blog</a></li>
+                <li><button class="btn-praimary">Hiar Me</button></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
