--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styls/protfolio.css">
 </head>
 <body>
-    <header>
+    <header cvlass="header">
         <nav>
             <h1 class="nav-title">Ra<span class="text-praimary">s</span>hu</h1>
             <ul>
@@ -19,6 +19,18 @@
                 <li><button class="btn-praimary">Hiar Me</button></li>
             </ul>
         </nav>
+        <div class="bennar">
+            <div class="bennar-content">
+                <h3>Hi, I  am</h3>
+                <h1>Rashu</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-praimary">Download cv</button>
+                <button class="btn-praimary">Contact</button>
+            </div>
+            <div>
+                <img class="profile-picture" src="images/hardy.png">
+            </div>
+        </div>
     </header>
     <main>
 
