--- a/index.html
+++ b/index.html
@@ -55,6 +55,36 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="section-title">
+                <h3>What I do</h3>
+                <div id="what-i-do-decsription" class="section-decsripotion">
+                    I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+                </div>
+                <div class="skill-conteinar">
+                    <div class="skill">
+                        <img src="images/icons/js.png">
+                        <h3 class="skill-title">Vanilla JavaScript</h3>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/react.png">
+                        <h3 class="skill-title">React</h3>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/nodejs.png">
+                        <h3 class="skill-title">Nod js</h3>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/mongo.png">
+                        <h3 class="skill-title">Mongo Db</h3>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
